@@ -27,14 +27,14 @@
  */
 package org.hisp.dhis.validation.config;
 
+import java.util.Map;
+
 import org.hisp.dhis.common.ServiceProvider;
 import org.hisp.dhis.dataanalysis.DataAnalysisService;
 import org.hisp.dhis.dataanalysis.MinMaxOutlierAnalysisService;
 import org.hisp.dhis.dataanalysis.StdDevOutlierAnalysisService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
-import com.google.common.collect.ImmutableMap;
 
 /**
  * @author Luciano Fiandesio
@@ -48,7 +48,7 @@ public class ServiceConfig
         MinMaxOutlierAnalysisService minMaxOutlierAnalysisService )
     {
         ServiceProvider<DataAnalysisService> serviceProvider = new ServiceProvider<>();
-        serviceProvider.setServices( ImmutableMap.of( "stddevoutlier", stdDevOutlierAnalysisService, "minmaxoutlier",
+        serviceProvider.setServices( Map.of( "stddevoutlier", stdDevOutlierAnalysisService, "minmaxoutlier",
             minMaxOutlierAnalysisService ) );
         return serviceProvider;
     }
